--- a/.github/workflows/publish_doc.yml
+++ b/.github/workflows/publish_doc.yml
@@ -39,6 +39,11 @@ jobs:
         dotnet tool install -g dotnet-reportgenerator-globaltool
         echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
+    - name: Setup .NET 6 runtime (for dll2mmd)
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '6.0.x'
+
     - name: Run tests with coverage
       run: dotnet test --configuration Release --collect:"XPlat Code Coverage"
 
@@ -46,6 +51,11 @@ jobs:
       run: |
         mkdir -p Cobertura
         reportgenerator "-reports:**/coverage.cobertura.xml" "-targetdir:Cobertura" -reporttypes:MarkdownSummaryGithub
+
+    - name: Setup .NET 6 runtime (for dll2mmd)
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '6.0.x'
 
     - name: Generate class diagram
       run: |
