--- a/.github/workflows/publish_version.yml
+++ b/.github/workflows/publish_version.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           fetch-depth: 0
 
+        on:
+          push:
+            tags:
+              - 'v*'
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
